Unit und UnitType Objektmodell eingefügt
git-svn-id: file:///home/nik/repositories/svn/master@594 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
@@ -65,6 +65,11 @@ Diese Operation ermittelt, ob es schon eine Referenz auf einen Einheitentyp mit 
 Fachlich gesehen können Einheiten (Units) von Quantitäten angenommen werden und sind in Einheitentypen typisiert.
 Dabei wird zwischen atomaren Einheiten (z.B. Meter [m]) und zusammengesetzten Einheiten (z.B. Kilometer pro Stunde [km/h]) unterschieden.
 
+\subsubsubsection{Objektmodell}
+
+Die Zusammenhänge zwischen Units und UnitTypes sollen an dieser Stelle anhand eines beispielhaften Objektmodells in \refImg{unit_unittypes_objektmodell} verdeutlicht werden.
+\img[width=\relWidth{0.8}]{quantity/unit_unittypes_objektmodell.png}{Objektmodell: Geschwindigkeit und Beschleunigung}{unit_unittypes_objektmodell}
+
 
 \subsubsubsection{Verwalten von Units}
 
