--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
@@ -1,5 +1,5 @@
 \subsection{Quantity}
-\TODO[Dient zum Abbilden von Werten mit Einheit]
+Die Klasse Quantity dient zur Angabe von einheitenbehafteten Werten. Jede Einheit ist dabei in einem Einheitentyp typisiert. Bei den Quantitäten gibt es atomare, die nur einen Wert mit einer Einheit besitzen, und zusammengesetzte, die einen Vektor atomarer Quantitäten mit unterschiedlichen Einheiten darstellen, wobei die Einheiten alle im selben Einheitentyp typisiert sein müssen.
 
 \subsubsection{Die Manager}
 
