added label ausblick weitergeschrieben...
git-svn-id: file:///home/nik/repositories/svn/master@596 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/sections/Ausblick.tex
+++ b/public/doku/metaModel/trunk/content/sections/Ausblick.tex
@@ -12,10 +12,12 @@ Es bietet sich beispielsweise an, eine Klasse Multiplicity zwischen \term{O++A} 
 welche zwei boolsche Attribute $\leq$ und $\geq$ enthält. 
 Damit lassen sich die vier Multiplizitäten $0..n$, $1..n$, $1$ und $0..1$ darstellen.
 Dies zieht u.a. einige Konsistenzbedingungen nach sich, welche beim Anlegen von Links beachtet werden müssen. 
+  \item[Mehrstellige Assoziationen]
+  \item[Messages] Wie bereits im Abschnitt \ref{Messages} beschrieben, sind Messages zwar im Metamodell enthalten, 
+  eine Implementierung wurde in dieser Ausbaustufe allerdings nicht umgesetzt. 
   \item[Path]
   \item[Posting Rules]
   \item[Versionierung]
   \item[Zentrale Ablage der Constraints]
-  \item[Mehrstellige Assoziationen]
 \end{description}
   
