--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Messages.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Messages.tex
@@ -1,4 +1,4 @@
-\subsection{Messages und Links}
+\subsection{Messages und Links}\label{Messages}
 
 Messages und Links haben eine gemeinsame Oberklasse MessageOrLink. In der ersten Ausbaustufe werden lediglich die Links implementiert. Zu den Messages existiert eine rudimentäre
 Implementierung die dem Anwender aber über die Oberfläche nicht bereitgestellt wird, da die 
