--- a/public/doku/metaModel/trunk/content/sections/Ausblick.tex
+++ b/public/doku/metaModel/trunk/content/sections/Ausblick.tex
@@ -1,13 +1,11 @@
 \section{Ausblick}
-
-\TODO[Ideen Formulieren]
-
+Im Laufe des Projekts sind viele Ideen aufgekommen, die aufgrund von Entwurfsentscheidungen oder Zeitmangel 
+jedoch nicht umgesetzt werden konnten. In diesem kurzen Ausblick wird eine Auswahl von Erweiterungsmöglichkeiten skizziert.
 
 \begin{description}
   \item[Multiplizitäten] Zurzeit besitzen Assoziationen keine Einschränkungen. 
 Es werden sozusagen überall $0..n$-Multiplizitäten verwendet. 
 Mit der Einführung von Multiplizitäten können Assoziationen eingeschränkt werden.
- 
 Es bietet sich beispielsweise an, eine Klasse Multiplicity zwischen \term{O++A} und \term{Type} zu hängen,
 welche zwei boolsche Attribute $\leq$ und $\geq$ enthält. 
 Damit lassen sich die vier Multiplizitäten $0..n$, $1..n$, $1$ und $0..1$ darstellen.
