--- a/public/doku/metaModel/trunk/content/sections/Ausblick.tex
+++ b/public/doku/metaModel/trunk/content/sections/Ausblick.tex
@@ -1,22 +1,30 @@
 \section{Ausblick}
 Im Laufe des Projekts sind viele Ideen aufgekommen, die aufgrund von Entwurfsentscheidungen oder Zeitmangel 
-jedoch nicht umgesetzt werden konnten. In diesem kurzen Ausblick wird eine Auswahl von Erweiterungsmöglichkeiten skizziert.
+jedoch nicht umgesetzt werden konnten. Dieser kurze Ausblick skizziert eine Auswahl von Erweiterungsmöglichkeiten und 
+soll nachträgliche Implementierungen anregen.
 
 \begin{description}
   \item[Multiplizitäten] Zurzeit besitzen Assoziationen keine Einschränkungen. 
 Es werden sozusagen überall $0..n$-Multiplizitäten verwendet. 
 Mit der Einführung von Multiplizitäten können Assoziationen eingeschränkt werden.
-Es bietet sich beispielsweise an, eine Klasse Multiplicity zwischen \term{O++A} und \term{Type} zu hängen,
+Es bietet sich beispielsweise an, eine Klasse \term{Multiplicity} zwischen \term{O++A} und \term{Type} zu hängen,
 welche zwei boolsche Attribute $\leq$ und $\geq$ enthält. 
 Damit lassen sich die vier Multiplizitäten $0..n$, $1..n$, $1$ und $0..1$ darstellen.
 Dies zieht u.a. einige Konsistenzbedingungen nach sich, welche beim Anlegen von Links beachtet werden müssen. 
-  \item[Mehrstellige Assoziationen] Aktuell gibt es für eine Assoziation nur genau ein Quell- und genau ein Zieltypen. Um Mehrstellige Assoziationen und Links zu implementieren, könnten die Formal- und Aktualparameter verwendet werden. Eine Assoziation bestünde dann aus den zwei explizit genannten Quell- und Zieltypen sowie einer Liste von Formalparametern wobei jeder Formalparameter eine weitere Quelle darstellen würde. Um dies adäquat auf der Exemplarebene abzubilden, würden die Links sich ihrer Aktualparameter bedienen. Das aktuelle \MM sieht diese Implementierung schon vor, da sowohl Formal- als auch Aktualparameter von den jeweiligen Oberklassen AbstractOperation und Message++Link ausgehen.
-  \item[Messages] Wie schon im Kapitel \ref{Message:Message} erläutert wurden Messages in der ersten Implementierungsstufe nicht umgesetzt. Zum gegenwärtigen Zeitpunkt existiert für ein Message-Exemplar sowohl die Interpretation des Nachrichtenaufrufs, als auch des Nachrichteninhalts.
+  \item[Mehrstellige Assoziationen] Aktuell gibt es für eine Assoziation nur genau ein Quell- und genau ein Zieltypen. 
+  Um Mehrstellige Assoziationen und Links zu implementieren, könnten die Formal- und Aktualparameter verwendet werden. 
+  Eine Assoziation bestünde dann aus den zwei explizit genannten Quell- und Zieltypen sowie einer Liste von Formalparametern 
+  wobei jeder Formalparameter eine weitere Quelle darstellen würde. Um dies adäquat auf der Exemplarebene abzubilden, 
+  würden die Links sich ihrer Aktualparameter bedienen. Das aktuelle \MM sieht diese Implementierung schon vor, da sowohl 
+  Formal- als auch Aktualparameter von den jeweiligen Oberklassen \term{AbstractOperation} und \term{Message++Link} ausgehen.
+  \item[Messages] Wie schon im Kapitel \ref{Message:Message} erläutert wurden Messages in der ersten Implementierungsstufe nicht umgesetzt. 
+  Zum gegenwärtigen Zeitpunkt existiert für ein Message-Exemplar sowohl die Interpretation des Nachrichtenaufrufs, als auch des Nachrichteninhalts.
 Bevor Messages umgesetzt werden können muss sich geeinigt werden, welche der genannten Interpretationen für ein Message-Exemplars zutrifft. 
-  \item[ActualParameter] Da aus genannten Gründen weder Message-Exemplare erzeugt, noch mehrstellige Assoziationen/Links angelegt werden können, haben Aktualparameter derzeit keinerlei Daseinsberechtigung. Aus diesen Gründen wird die Verwaltung von Aktualparametern dem Anwender nicht angeboten.
-  \item[Path]
-  \item[Posting Rules]
-  \item[Versionierung]
-  \item[Zentrale Ablage der Constraints]
+  \item[ActualParameter] Da aus genannten Gründen weder Message-Exemplare erzeugt, noch mehrstellige Assoziationen/Links angelegt werden können, 
+  haben Aktualparameter derzeit keinerlei Daseinsberechtigung. Aus diesen Gründen wird die Verwaltung von Aktualparametern dem Anwender nicht angeboten.
+  \item[Path] \TODO[Noch schreiben\ldots]
+  \item[Posting Rules] \TODO[Noch schreiben\ldots]
+  \item[Versionierung] \TODO[Noch schreiben\ldots]
+  \item[Zentrale Ablage der Constraints] \TODO[Noch schreiben\ldots]
 \end{description}
   
