Weitere Korrekturen bzgl. Exceptiond und Satzstellungen
git-svn-id: file:///home/nik/repositories/svn/master@603 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/sections/Ausblick.tex
+++ b/public/doku/metaModel/trunk/content/sections/Ausblick.tex
@@ -7,7 +7,7 @@ soll nachträgliche Implementierungen anregen.
   \item[Multiplizitäten] Zurzeit besitzen Assoziationen keine Einschränkungen. 
 Es werden sozusagen überall $0..n$-Multiplizitäten verwendet. 
 Mit der Einführung von Multiplizitäten können Assoziationen eingeschränkt werden.
-Es bietet sich beispielsweise an, eine Klasse \term{Multiplicity} zwischen \term{O++A} und \term{Type} zu hängen,
+Es bietet sich beispielsweise an, eine Klasse \term{Multiplicity} zwischen \term{AbstractOperation} und \term{Type} zu hängen,
 welche zwei boolsche Attribute $\leq$ und $\geq$ enthält. 
 Damit lassen sich die vier Multiplizitäten $0..n$, $1..n$, $1$ und $0..1$ darstellen.
 Dies zieht u.a. einige Konsistenzbedingungen nach sich, welche beim Anlegen von Links beachtet werden müssen. 
@@ -17,9 +17,9 @@ Dies zieht u.a. einige Konsistenzbedingungen nach sich, welche beim Anlegen von 
   wobei jeder Formalparameter eine weitere Quelle darstellen würde. Um dies adäquat auf der Exemplarebene abzubilden, 
   würden die Links sich ihrer Aktualparameter bedienen. Das aktuelle \MM sieht diese Implementierung schon vor, da sowohl 
   Formal- als auch Aktualparameter von den jeweiligen Oberklassen \term{AbstractOperation} und \term{Message++Link} ausgehen.
-  \item[Messages] Wie schon im Kapitel \ref{Message:Message} erläutert wurden Messages in der ersten Implementierungsstufe nicht umgesetzt. 
+  \item[Messages] Wie schon im Kapitel \ref{Message:Message} erläutert, wurden Messages in der ersten Implementierungsstufe nicht umgesetzt. 
   Zum gegenwärtigen Zeitpunkt existiert für ein Message-Exemplar sowohl die Interpretation des Nachrichtenaufrufs, als auch des Nachrichteninhalts.
-Bevor Messages umgesetzt werden können muss sich geeinigt werden, welche der genannten Interpretationen für ein Message-Exemplars zutrifft. 
+Bevor Messages umgesetzt werden können, muss sich geeinigt werden, welche der genannten Interpretationen für ein Message-Exemplars zutrifft. 
   \item[ActualParameter] Da aus genannten Gründen weder Message-Exemplare erzeugt, noch mehrstellige Assoziationen/Links angelegt werden können, 
   haben Aktualparameter derzeit keinerlei Daseinsberechtigung. Aus diesen Gründen wird die Verwaltung von Aktualparametern dem Anwender nicht angeboten.
   \item[Path] \TODO[Noch schreiben\ldots]
