--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
@@ -120,7 +120,9 @@ Im gezeigten Beispiel gibt es drei Einheiten a, b und c, wobei zunächst a die D
 \subsubsubsection{Einfache und zusammengesetzte Quantitäten}
 
 Quantitäten können sowohl atomar als auch zusammengesetzt sein.
-Dies wird definiert die parts-Assoziation zwischen CompoundQuantity und Quantity. Dabei kann man zusammengesetzte Quantitäten als Vektoren auffassen, deren Elemente einfacehe Quantitäten sind. \emph{In einem Vektor dürfen nur solche Quantiäten enthalten sein, die mit dem gleichen UnitType assoziiert sind}. 
+Dies wird definiert die parts-Assoziation zwischen \term{CompoundQuantity} und \term{Quantity}. 
+Dabei kann man zusammengesetzte Quantitäten als Vektoren auffassen, deren Elemente einfache Quantitäten sind. 
+\emph{In einem Vektor dürfen nur solche Quantiäten enthalten sein, die mit dem gleichen UnitType assoziiert sind}. 
 
 \subsubsubsection{Berechnungen und Vergleiche}\label{Berechnungen}
 
