--- a/public/doku/metaModel/trunk/content/sections/Ausblick.tex
+++ b/public/doku/metaModel/trunk/content/sections/Ausblick.tex
@@ -7,7 +7,7 @@ soll nachträgliche Implementierungen anregen.
   \item[Multiplizitäten] Zurzeit besitzen Assoziationen keine Einschränkungen. 
 Es werden sozusagen überall $0..n$-Multiplizitäten verwendet. 
 Mit der Einführung von Multiplizitäten können Assoziationen eingeschränkt werden.
-Es bietet sich beispielsweise an, eine Klasse \term{Multiplicity} zwischen \term{AbstractOperation} und \term{Type} zu hängen,
+Es bietet sich beispielsweise an, eine Klasse \term{Multiplicity} zwischen \term{Association} und \term{Type} zu hängen,
 welche zwei boolsche Attribute $\leq$ und $\geq$ enthält. 
 Damit lassen sich die vier Multiplizitäten $0..n$, $1..n$, $1$ und $0..1$ darstellen.
 Dies zieht u.a. einige Konsistenzbedingungen nach sich, welche beim Anlegen von Links beachtet werden müssen. 
